--- a/BaseModels.ipynb
+++ b/BaseModels.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ad5bca33",
    "metadata": {
     "tags": []
@@ -203,7 +203,7 @@
      "text": [
       "(35354, 5)\n",
       "(7786, 5)\n",
-      "model being saved to ../../data/models/dualhist_model_hist400_h400_st600_a400_g400_ed3_std2_ad2_gd2_balanced\n",
+      "model being saved to ../../data/models/dual_dualfacenet_h600_st600_a400_g400_ed4_std2_ad2_gd2_balanced\n",
       "epoch 0\n"
      ]
     },
@@ -219,8 +219,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curr loss 6.542600631713867 step 29  | \r"
+      "train loss 6.122271144457456 train accuracy [0.17483782764040146, 0.4327495172198883, 0.6112010759317269]\n",
+      "val loss 5.852380599731054 val accuracy [0.2356529458402059, 0.5615623031671231, 0.7665086289246877]\n",
+      "epoch 1\n",
+      "train loss 6.080811311969649 train accuracy [0.19652018750791495, 0.45214269575426136, 0.6336796269410074]\n",
+      "val loss 5.938020700063461 val accuracy [0.18563207640097693, 0.5885688639604129, 0.7551162609687219]\n",
+      "epoch 2\n",
+      "train loss 6.119507001618207 train accuracy [0.18565285127967765, 0.4603075832970398, 0.641798479745617]\n",
+      "val loss 6.0662884162022515 val accuracy [0.15022957277221557, 0.5447853173200901, 0.757576013986881]\n",
+      "epoch 3\n",
+      "train loss 6.167756818782138 train accuracy [0.1758589619339186, 0.45036826724723233, 0.6375695606746242]\n",
+      "val loss 6.0802591397212105 val accuracy [0.13117173132606041, 0.5702325445719254, 0.7920393370665036]\n",
+      "epoch 4\n",
+      "train loss 6.252699257963795 train accuracy [0.15820673399599594, 0.4140165198152348, 0.6331230282446759]\n",
+      "val loss 6.341916750638913 val accuracy [0.13153249545930287, 0.33306498959278447, 0.7529397591566428]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'epoch': 0,\n",
+       "  'train_loss': 6.122271144457456,\n",
+       "  'train_acc': [0.17483782764040146, 0.4327495172198883, 0.6112010759317269],\n",
+       "  'val_loss': 5.852380599731054,\n",
+       "  'val_acc': [0.2356529458402059, 0.5615623031671231, 0.7665086289246877],\n",
+       "  'lr': 0.01,\n",
+       "  'loss_weights': '2_1_0.5'},\n",
+       " {'epoch': 1,\n",
+       "  'train_loss': 6.080811311969649,\n",
+       "  'train_acc': [0.19652018750791495, 0.45214269575426136, 0.6336796269410074],\n",
+       "  'val_loss': 5.938020700063461,\n",
+       "  'val_acc': [0.18563207640097693, 0.5885688639604129, 0.7551162609687219],\n",
+       "  'lr': 0.01,\n",
+       "  'loss_weights': '2_1_0.5'},\n",
+       " {'epoch': 2,\n",
+       "  'train_loss': 6.119507001618207,\n",
+       "  'train_acc': [0.18565285127967765, 0.4603075832970398, 0.641798479745617],\n",
+       "  'val_loss': 6.0662884162022515,\n",
+       "  'val_acc': [0.15022957277221557, 0.5447853173200901, 0.757576013986881],\n",
+       "  'lr': 0.01,\n",
+       "  'loss_weights': '2_1_0.5'},\n",
+       " {'epoch': 3,\n",
+       "  'train_loss': 6.167756818782138,\n",
+       "  'train_acc': [0.1758589619339186, 0.45036826724723233, 0.6375695606746242],\n",
+       "  'val_loss': 6.0802591397212105,\n",
+       "  'val_acc': [0.13117173132606041, 0.5702325445719254, 0.7920393370665036],\n",
+       "  'lr': 0.01,\n",
+       "  'loss_weights': '2_1_0.5'},\n",
+       " {'epoch': 4,\n",
+       "  'train_loss': 6.252699257963795,\n",
+       "  'train_acc': [0.15820673399599594, 0.4140165198152348, 0.6331230282446759],\n",
+       "  'val_loss': 6.341916750638913,\n",
+       "  'val_acc': [0.13153249545930287, 0.33306498959278447, 0.7529397591566428],\n",
+       "  'lr': 0.01,\n",
+       "  'loss_weights': '2_1_0.5'}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -244,7 +301,7 @@
     "                validation_df,\n",
     "                root,\n",
     "                epochs=300,\n",
-    "                lr=.001,\n",
+    "                lr=.01,\n",
     "                batch_size=200,\n",
     "                patience = 20,\n",
     "                loss_weights = [2,1,.5],\n",
@@ -367,13 +424,14 @@
     "    return model,hist\n",
     "\n",
     "m,h = train_model(\n",
-    "    DualHistogramModel(base_model=InceptionResnetV1(pretrained='vggface2')),\n",
-    "#     DualHistogramModel(),\n",
+    "    DualFacenetModel(embedding_dropout=.4,hidden_dims=[600]),\n",
     "    train_labels,\n",
     "    validation_labels,\n",
     "    Constants.data_root,\n",
     "    batch_size=100,\n",
-    "    histogram=True,\n",
+    "    histogram=False,\n",
+    "#     lr=10,\n",
+    "#     upsample=False,\n",
     ")\n",
     "del m\n",
     "h"
@@ -384,16 +442,29 @@
    "execution_count": null,
    "id": "9f08b98c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35354, 5)\n",
+      "(7786, 5)\n",
+      "model being saved to ../../data/models/dual_dualfacenet_h400_st600_a400_g400_ed3_std2_ad2_gd2_hist10_histd_0.1_balanced\n",
+      "epoch 0\n",
+      "curr loss 6.697600364685059 step 234  |  \r"
+     ]
+    }
+   ],
    "source": [
     "m,h = train_model(\n",
-    "#     DualHistogramModel(base_model=InceptionResnetV1(pretrained='vggface2')),\n",
     "    DualHistogramModel(),\n",
     "    train_labels,\n",
     "    validation_labels,\n",
     "    Constants.data_root,\n",
     "    batch_size=100,\n",
-    "    histogram=True,\n",
+    "#     histogram=False,\n",
+    "#     lr=10,\n",
+    "#     upsample=False,\n",
     ")\n",
     "del m\n",
     "h"
@@ -405,12 +476,24 @@
    "id": "cf0f5564",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DualHistogramModel()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "30424a60-e49f-43d8-8b19-e711c7c82754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3470cf72-d79e-4449-8b77-340620ba6895",
    "metadata": {},
    "outputs": [],
    "source": []
