working on evaluation for unsupervised

--- a/Unsupervised.ipynb
+++ b/Unsupervised.ipynb
@@ -39,6 +39,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.53\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -116,48 +123,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11548</th>\n",
-       "      <td>TEST2995.png</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11549</th>\n",
-       "      <td>TEST2996.png</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11550</th>\n",
-       "      <td>TEST2997.png</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11551</th>\n",
-       "      <td>TEST2998.png</td>\n",
+       "      <th>8548</th>\n",
+       "      <td>TRAIN11332.png</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8549</th>\n",
+       "      <td>TRAIN2383.png</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8550</th>\n",
+       "      <td>TRAIN6490.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8551</th>\n",
+       "      <td>TRAIN9278.png</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11552</th>\n",
-       "      <td>TEST2999.png</td>\n",
-       "      <td>7</td>\n",
+       "      <th>8552</th>\n",
+       "      <td>TRAIN8349.png</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11553 rows × 5 columns</p>\n",
+       "<p>8553 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -168,13 +175,13 @@
        "3      TRAIN0007.png          1       0    1     True\n",
        "4      TRAIN0009.png          7       0    1    False\n",
        "...              ...        ...     ...  ...      ...\n",
-       "11548   TEST2995.png          2       0    2     True\n",
-       "11549   TEST2996.png          4       0    1     True\n",
-       "11550   TEST2997.png          0       1    1     True\n",
-       "11551   TEST2998.png          3       1    1     True\n",
-       "11552   TEST2999.png          7       0    0     True\n",
+       "8548  TRAIN11332.png          3       0    1    False\n",
+       "8549   TRAIN2383.png          2       0    2    False\n",
+       "8550   TRAIN6490.png          1       1    0     True\n",
+       "8551   TRAIN9278.png          4       1    1     True\n",
+       "8552   TRAIN8349.png          0       0    1     True\n",
        "\n",
-       "[11553 rows x 5 columns]"
+       "[8553 rows x 5 columns]"
       ]
      },
      "execution_count": 3,
@@ -184,17 +191,18 @@
    ],
    "source": [
     "def get_all_labels():\n",
-    "    labels = ['train_data_clean.csv','validation_data_clean.csv','test_data_clean.csv']\n",
+    "    labels = ['train_data_clean.csv','validation_data_clean.csv']\n",
     "    dfs = [pd.read_csv(f) for f in labels]\n",
     "    df = pd.concat(dfs,axis=0).reset_index().drop('index',axis=1)\n",
     "    return df\n",
     "all_labels = get_all_labels()\n",
+    "print(all_labels.shape[0]/100)\n",
     "all_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -271,6 +279,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "873e7eed-3932-4d8d-8130-85a738eb3a51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.spatial\n",
+    "\n",
+    "def get_embeddings(model,data_loader,device=None):\n",
+    "    if device is None:\n",
+    "        device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    format_y = lambda y: y.long().to(device)\n",
+    "    model.train(False)\n",
+    "    embeddings = []\n",
+    "    labels = [[],[],[]]\n",
+    "    for i, [x_batch,y_batch] in enumerate(data_loader):\n",
+    "        x_batch = x_batch.to(device)\n",
+    "        embedding = model(x_batch)\n",
+    "        embeddings.append(embedding.detach())\n",
+    "        for ii,yy in enumerate(y_batch):\n",
+    "            labels[ii].append(format_y(yy).detach())\n",
+    "        print(i,end='\\r')\n",
+    "    embeddings = torch.cat(embeddings)\n",
+    "    labels = [torch.cat(l) for l in labels]\n",
+    "    return embeddings, labels\n",
+    "\n",
+    "def cuda_mode(vector):\n",
+    "    unique, counts = vector.unique(return_counts=True)\n",
+    "    return unique[torch.argmax(counts)]\n",
+    "\n",
+    "def torch_knn(x, y, k=10):\n",
+    "    #n x n distance matrix\n",
+    "    dists = torch.cdist(x,x)\n",
+    "    #indices for neighbors, self will always be first so skip it\n",
+    "    neighbors = torch.argsort(dists,dim=1,descending=False)[:,1:k+1]\n",
+    "    predictions = torch.zeros(y.shape).long()\n",
+    "    y = y.long()\n",
+    "    for i,n in enumerate(neighbors):\n",
+    "        ny = y[n]\n",
+    "        predictions[i] = cuda_mode(ny)\n",
+    "    accuracy = torch.mean((y == predictions).float()).item()\n",
+    "    return predictions, accuracy\n",
+    "\n",
+    "def eval_knn_model(model,val_dataloader,klist=[5],device=None):\n",
+    "    with torch.no_grad():\n",
+    "        val_x, val_y = get_embeddings(model,val_dataloader,device=device)\n",
+    "        results = []\n",
+    "        for k in klist:\n",
+    "            outputs = [torch_knn(val_x, vy,k=k) for vy in val_y]\n",
+    "            accuracys = [i[1] for i in outputs]\n",
+    "            results.append(accuracys)\n",
+    "        if len(klist) < 2:\n",
+    "            results = results[0]\n",
+    "    return results\n",
+    "\n",
+    "# testmodel = UnsupervisedTripletEncoder()\n",
+    "# testdata = UnsupervisedTripletGenerator(all_labels,Constants.data_root,upsample=False,batch_size=100,validation=True)\n",
+    "# eval_knn_model(testmodel,testdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ad5bca33",
    "metadata": {
@@ -281,9 +350,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model being saved to ../../data/models/abstractmodel_balanced\n",
-      "epoch 0\n",
-      "curr loss 0.2504828870296478 step 169  | | \r"
+      "model being saved to ../../data/models/abstractmodel\n",
+      "epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curr loss 1.0527061223983765 step 12  | \r"
      ]
     }
    ],
@@ -308,6 +391,7 @@
     "                save_path=None,\n",
     "                histogram =False,\n",
     "                upsample=True,\n",
+    "                k_values=[3,5,7],\n",
     "                **kwargs,\n",
     "               ):\n",
     "    if save_path is None:\n",
@@ -317,6 +401,7 @@
     "    if upsample:\n",
     "        patience = int(patience/5) + 1\n",
     "    data_loader = UnsupervisedTripletGenerator(df,Constants.data_root,batch_size=batch_size,upsample=upsample,**kwargs)\n",
+    "    validation_loader = UnsupervisedTripletGenerator(df,Constants.data_root,batch_size=batch_size,upsample=False,validation=True,**kwargs)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    model = model.to(device)\n",
     "    model.train(True)\n",
@@ -369,10 +454,10 @@
     "        model.train(True)\n",
     "        avg_loss, avg_acc = train_epoch()\n",
     "        print('train loss', avg_loss, 'train accuracy', avg_acc)\n",
-    "#         model.train(False)\n",
-    "#         val_loss,val_embed_loss, val_acc = val_epoch()\n",
-    "#         print('val loss', val_loss, 'val_embed_loss', val_embed_loss, 'val accuracy', val_acc)\n",
-    "\n",
+    "        model.train(False)\n",
+    "        val_accs = eval_knn_model(model,val_dataloader,klist=k_values,device=device)\n",
+    "        for kv, val_acc in zip(k_values,val_accs):\n",
+    "            print('val accuracy k=',k,val_acc)\n",
     "        #don't save immediately in case I cancel training\n",
     "        if best_val_loss > avg_loss and epoch > 1:\n",
     "            torch.save(model,save_path)\n",
@@ -402,6 +487,7 @@
     "    all_labels,\n",
     "    Constants.data_root,\n",
     "    batch_size=50,\n",
+    "    upsample=False,\n",
     "    histogram=False,\n",
     "    lr=.0001,\n",
     ")\n",
