--- a/Unsupervised.ipynb
+++ b/Unsupervised.ipynb
@@ -300,8 +300,8 @@
     "        for ii,yy in enumerate(y_batch):\n",
     "            labels[ii].append(format_y(yy).detach())\n",
     "        print(i,end='\\r')\n",
-    "    embeddings = torch.cat(embeddings)\n",
-    "    labels = [torch.cat(l) for l in labels]\n",
+    "    embeddings = torch.cat(embeddings).to(device)\n",
+    "    labels = [torch.cat(l).to(device) for l in labels]\n",
     "    return embeddings, labels\n",
     "\n",
     "def cuda_mode(vector):\n",
@@ -318,7 +318,7 @@
     "    for i,n in enumerate(neighbors):\n",
     "        ny = y[n]\n",
     "        predictions[i] = cuda_mode(ny)\n",
-    "    accuracy = torch.mean((y == predictions).float()).item()\n",
+    "    accuracy = torch.mean((y == predictions.to(y.get_device())).float()).item()\n",
     "    return predictions, accuracy\n",
     "\n",
     "def eval_knn_model(model,val_dataloader,klist=[5],device=None):\n",
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model being saved to ../../data/models/abstractmodel\n",
+      "model being saved to ../../data/models/abstractmodel_balanced\n",
       "epoch 0\n"
      ]
     },
@@ -366,7 +366,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curr loss 1.0527061223983765 step 12  | \r"
+      "val accuracy k= 3 [0.2579796016216278, 0.5969069004058838, 0.8458374738693237]\n",
+      "val accuracy k= 5 [0.2785455882549286, 0.6266864538192749, 0.8558736443519592]\n",
+      "val accuracy k= 7 [0.2867719829082489, 0.6335965991020203, 0.8550510406494141]\n",
+      "train loss 0.16926934211340158 step 876  |   \n",
+      "saved history to ../../data/results/history_abstractmodel.csv\n",
+      "epoch 1\n",
+      "val accuracy k= 3 [0.23132610321044922, 0.5435999035835266, 0.7333004474639893]\n",
+      "val accuracy k= 5 [0.2420204132795334, 0.5681145191192627, 0.7385653257369995]\n",
+      "val accuracy k= 7 [0.24152682721614838, 0.577163577079773, 0.7382363080978394]\n",
+      "train loss 0.0651183724499593step 877  |  |  \n",
+      "saved history to ../../data/results/history_abstractmodel.csv\n",
+      "epoch 2\n",
+      "val accuracy k= 3 [0.2181638777256012, 0.5435999035835266, 0.7165186405181885]\n",
+      "val accuracy k= 5 [0.23330043256282806, 0.5648239850997925, 0.7207963466644287]\n",
+      "val accuracy k= 7 [0.24119776487350464, 0.576340913772583, 0.7219480276107788]\n",
+      "curr loss 0.07191814482212067 step 563  |   \r"
      ]
     }
    ],
@@ -400,7 +415,7 @@
     "            save_path += '_balanced'\n",
     "    if upsample:\n",
     "        patience = int(patience/5) + 1\n",
-    "    data_loader = UnsupervisedTripletGenerator(df,Constants.data_root,batch_size=batch_size,upsample=upsample,**kwargs)\n",
+    "    data_loader = UnsupervisedTripletGenerator(df,Constants.data_root,batch_size=batch_size,upsample=False,**kwargs)\n",
     "    validation_loader = UnsupervisedTripletGenerator(df,Constants.data_root,batch_size=batch_size,upsample=False,validation=True,**kwargs)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    model = model.to(device)\n",
@@ -451,13 +466,14 @@
     "    print('model being saved to',save_path)\n",
     "    for epoch in range(epochs):\n",
     "        print('epoch',epoch)\n",
-    "        model.train(True)\n",
-    "        avg_loss, avg_acc = train_epoch()\n",
-    "        print('train loss', avg_loss, 'train accuracy', avg_acc)\n",
     "        model.train(False)\n",
-    "        val_accs = eval_knn_model(model,val_dataloader,klist=k_values,device=device)\n",
+    "        val_accs = eval_knn_model(model,validation_loader,klist=k_values,device=device)\n",
     "        for kv, val_acc in zip(k_values,val_accs):\n",
-    "            print('val accuracy k=',k,val_acc)\n",
+    "            print('val accuracy k=',kv,val_acc)\n",
+    "            \n",
+    "        model.train(True)\n",
+    "        avg_loss = train_epoch()\n",
+    "        print('train loss', avg_loss)\n",
     "        #don't save immediately in case I cancel training\n",
     "        if best_val_loss > avg_loss and epoch > 1:\n",
     "            torch.save(model,save_path)\n",
@@ -471,8 +487,8 @@
     "            'epoch': epoch,\n",
     "            'train_loss': avg_loss,\n",
     "#             'train_acc':avg_acc,\n",
-    "            'val_loss':avg_loss,\n",
-    "#             'val_acc': val_acc,\n",
+    "#             'val_loss':avg_loss,\n",
+    "            'val_acc': val_accs,\n",
     "            'lr': lr,\n",
     "#             'loss_weights': '_'.join([str(l) for l in loss_weights])\n",
     "        }\n",
@@ -487,7 +503,6 @@
     "    all_labels,\n",
     "    Constants.data_root,\n",
     "    batch_size=50,\n",
-    "    upsample=False,\n",
     "    histogram=False,\n",
     "    lr=.0001,\n",
     ")\n",
